--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ h3 {
 /* Footer */
 footer {
     font-size: 14px;
-    background: #64ffda;
+    background: #004080;
     padding: 20px;
-    color: #012246;
+    color: #64ffda;
 }
