--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ color: aquamarine;
     width: 80%;
     max-width: 300px;
     border-radius: 10px;
-    box-shadow: 0 10px 30px #0a192f;
+  box-shadow: 0px 8px 20px black;
 }
 
 .projects-section {
